@@ -2,6 +2,7 @@
 v3.0-git
 --------
 
+[jan] Send agenda emails with HTML part and convert to Horde_View.
 [mjr] More complete handling of recurring event exceptions when dealing with the
       iCalendar format (Request #9091).
 [jan] Add remote calendars to the possible list of calendars for free/busy
